tests/ui/async-await/async-closures/def-path.stderr
error[E0308]: mismatched types
  --> $DIR/def-path.rs:7:9
   |
LL |     let x = async || {};
   |                      -- the expected `async` closure body
LL |
LL |     let () = x();
   |         ^^   --- this expression has type `{static main::{closure#0}::{closure:async#0}<?17t> upvar_tys=?16t resume_ty=ResumeTy yield_ty=() return_ty=() witness=?5t}`
   |         |
   |         expected `async` closure body, found `()`
   |
   = note: expected `async` closure body `{static main::{closure#0}::{closure:async#0}<?17t> upvar_tys=?16t resume_ty=ResumeTy yield_ty=() return_ty=() witness=?5t}`
                         found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
